fixed typo, removed buttons that don't work, centered images

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -9,11 +9,11 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="images/champs_again.jpg" alt="Champs Again">
+          <img class="first-slide" src="images/champs_again.png" alt="Champs Again">
           <div class="container">
             <div class="carousel-caption">
               <h1>Champions yet again.</h1>
-              <p>In a documetory worthy comeback, the Cudas have won their 3rd championship in a row.</p>
+              <p>In a documentary worthy comeback, the Cudas have won their 3rd championship in a row.</p>
             </div>
           </div>
         </div>
@@ -36,14 +36,6 @@
           </div>
         </div>
       </div>
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
     </div><!-- /.carousel -->
 
 
