--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-		<link rel="stylesheet" href="carousel.css">
+		<link rel="stylesheet" href="app.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -38,25 +38,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">The Blue Barracudas</a>
+              <a class="navbar-brand" href="#/home">The Blue Barracudas</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#/home">Home</a></li>
-                <li><a href="#/view2">View 2</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li class="dropdown-header">Nav header</li>
-                    <li><a href="#">Separated link</a></li>
-                    <li><a href="#">One more separated link</a></li>
-                  </ul>
-                </li>
+                <li><a href="#/roster">Roster</a></li>
               </ul>
             </div>
           </div>
@@ -65,14 +51,15 @@
       </div>
     </div>
 
-    <div ng-view></div>
+		<div class="container app-view">
+    	<div ng-view></div>
+		</div>
 		
-		<div class="container marketing">
+		<div class="container">
 		
 			<!-- FOOTER -->
-			<footer>
-				<p class="pull-right"><a href="#">Back to top</a></p>
-				<p>&copy; 2016 ATX Blue Barracudas &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+			<footer class="footer">
+				<p>&copy; 2016 ATX Blue Barracudas</p>
 			</footer>
 
     </div><!-- /.container -->
