--- a/app/index.html
+++ b/app/index.html
@@ -75,6 +75,6 @@
 		<script src="bower_components/angular-route/angular-route.js"></script>
 		<script src="app.js"></script>
 		<script src="home/home.js"></script>
-		<script src="view2/view2.js"></script>
+		<script src="roster/roster.js"></script>
   </body>
 </html>
