added darkend background to roster page, centered roster images and text

--- a/app/roster/roster.html
+++ b/app/roster/roster.html
@@ -1,10 +1,10 @@
 <div class="roster container">
 	<div class="row">
 		<div class="col-lg-4" ng-repeat="player in players">
-			<img class="img-circle" ng-src="{{player.image_url}}" alt="Generic placeholder image" width="140" height="140">
-			<h2>{{player.name}}</h2>
-			<p>{{player.nickname}}</p>
-			<p>{{player.positions}}</p>
+			<img class="img-circle center-block" ng-src="{{player.image_url}}" alt="Player Headshot" width="180" height="180">
+			<h2 class="text-center">{{player.name}}</h2>
+			<p class="text-center">{{player.nickname}}</p>
+			<p class="text-center">{{player.positions}}</p>
 		</div><!-- /.col-lg-4 -->
 	</div><!-- /.row -->
 </div>
