[BG_IMG_CSS] updated bg image to work for iphones in portrait mode

--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,8 @@
 
   <body>
 		
+		<img class="bg" src="images/champs_again.jpeg" alt="post championship team picture">
+		
 		<div class="navbar-wrapper">
       <div class="container">
 
@@ -55,16 +57,6 @@
 		<div class="container app-view">
     	<div ng-view></div>
 		</div>
-		
-		<div class="container">
-		
-			<!-- FOOTER -->
-			<footer class="footer">
-				<p>&copy; 2016 ATX Blue Barracudas</p>
-			</footer>
-
-    </div><!-- /.container -->
-		
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
