--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,7 @@
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li><a href="#/roster">Roster</a></li>
+								<li><a href="#/schedule">Schedule</a></li>
               </ul>
             </div>
           </div>
