--- a/app/roster/roster.html
+++ b/app/roster/roster.html
@@ -1,7 +1,7 @@
 <div class="roster container">
 	<div class="row">
-		<div class="col-lg-4" ng-repeat="player in players">
-			<img class="img-circle center-block" ng-src="{{player.image_url}}" alt="Player Headshot" width="180" height="180">
+		<div class="col-lg-4 roster-entry" ng-repeat="player in players">
+			<img class="img-circle center-block" ng-src="{{player.image_url}}" alt="Player Headshot">
 			<h2 class="text-center">{{player.name}}</h2>
 			<p class="text-center">{{player.nickname}}</p>
 			<p class="text-center">{{player.positions}}</p>
