[SCHEDULE] added the simple format of the schedule

--- a/app/index.html
+++ b/app/index.html
@@ -70,5 +70,6 @@
 		<script src="app.js"></script>
 		<script src="home/home.js"></script>
 		<script src="roster/roster.js"></script>
+		<script src="schedule/schedule.js"></script>
   </body>
 </html>
