removed roster background shading, added standings link to cedar park page

--- a/app/index.html
+++ b/app/index.html
@@ -47,6 +47,7 @@
               <ul class="nav navbar-nav">
                 <li><a href="#/roster">Roster</a></li>
 								<li><a href="#/schedule">Schedule</a></li>
+								<li><a href="http://tmsdln.com/8wf7">Standings</a></li>
               </ul>
             </div>
           </div>
