added login form and css and add user and login lambdas

--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,34 @@
 								<li><a href="#/schedule">Schedule</a></li>
 								<li><a href="http://tmsdln.com/8wf7">Standings</a></li>
               </ul>
+							<ul class="nav navbar-nav navbar-right">
+								<li class="dropdown">
+									<a class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
+									<ul id="login-dp" class="dropdown-menu">
+										<li>
+											 <div class="row">
+													<div class="col-md-12">
+														 <form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
+																<div class="form-group">
+																	 <label class="sr-only" for="exampleInputEmail2">Username</label>
+																	 <input type="username" class="form-control" id="exampleInputEmail2" placeholder="username" required>
+																</div>
+																<div class="form-group">
+																	<label class="sr-only" for="exampleInputPassword2">Password</label>
+																	<input type="password" class="form-control" id="exampleInputPassword2" placeholder="password" required>
+																</div>
+																<div class="form-group">
+																	 <button type="submit" class="btn btn-primary btn-block">Sign in</button>
+																</div>
+														 </form>
+													</div>
+											 </div>
+										</li>
+									</ul>
+								</li>
+							</ul>
             </div>
+						
           </div>
         </nav>
 
