--- a/app/index.html
+++ b/app/index.html
@@ -57,7 +57,7 @@
               <ul class="nav navbar-nav">
                 <li><a href="#/roster">Roster</a></li>
 								<li><a href="#/schedule">Schedule</a></li>
-								<li><a href="http://tmsdln.com/8wf7">Standings</a></li>
+								<li><a href="http://tmsdln.com/b3hf">Standings</a></li>
               </ul>
             </div>
           </div>
