--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,4 +1,4 @@
 <div class="jumbotron">
 	<h1>Failure in the form of second place.</h1>
-	<p>The 'Cudas had a chance at glory and a fourth consecutive championship, but it slipped through their fingers. Generatons out played the 'Cudas in the defacto championship game. Now the mystique is gone, and the league sees them as beatable.</p>
+	<p>The 'Cudas had a chance at glory and a fourth consecutive championship, but it slipped through their fingers. Generations out played the 'Cudas in the defacto championship game. Now the mystique is gone, and the league sees them as beatable.</p>
 </div>
