--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,7 @@
               </ul>
 							<ul class="nav navbar-nav navbar-right">
 								<li class="dropdown" ng-controller="MainCtrl">
-									<a class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
+									<a ng-if="main.currentUser == null" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
 									<ul id="login-dp" class="dropdown-menu">
 										<li>
 											 <div class="row">
@@ -74,6 +74,9 @@
 										</li>
 									</ul>
 								</li>
+                <li ng-controller="MainCtrl">
+                  <button ng-if="main.currentUser" class="btn btn-default navbar-btn" ng-click="main.logout()">Logout</button>
+                </li>
 							</ul>
             </div>
 						
