--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,4 +1,7 @@
 <div class="jumbotron">
-	<h1>Champions yet again.</h1>
-	<p>In a documentary worthy comeback, the Cudas have won their 3rd championship in a row.</p>
+	<div class="row">
+		<div class="col-xs-12" ng-repeat="message in messages">
+			<p class="text-center">{{message.content}}</p>
+		</div>
+	</div>
 </div>
