--- a/app/index.html
+++ b/app/index.html
@@ -111,6 +111,8 @@
 		<script src="bower_components/angular-route/angular-route.js"></script>
 		<script src="bower_components/a0-angular-storage/dist/angular-storage.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 		<script src="app.js"></script>
 		<script src="home/home.js"></script>
 		<script src="roster/roster.js"></script>
