[AUTH] message post now includes date, posts are now reverse ordered by date

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -15,7 +15,7 @@
 
 <div class="jumbotron">
 	<div class="row">
-		<div class="col-xs-12" ng-repeat="message in messages">
+		<div class="col-xs-12" ng-repeat="message in messages | orderBy: 'date':true | limitTo: 20">
 			<p class="text-center">{{message.content}}</p>
 		</div>
 	</div>
