--- a/app/index.html
+++ b/app/index.html
@@ -129,5 +129,6 @@
 		<script src="home/home.js"></script>
 		<script src="roster/roster.js"></script>
 		<script src="schedule/schedule.js"></script>
+    <script src="signup/signup.js"></script>
   </body>
 </html>
