--- a/app/index.html
+++ b/app/index.html
@@ -12,8 +12,9 @@
 
     <title>The Blue Barracudas | Austin, TX</title>
 
-    <!-- Bootstrap core CSS -->
+    <!-- CSS -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
 		<link rel="stylesheet" href="app.css">
