--- a/app/signup/signup.html
+++ b/app/signup/signup.html
@@ -23,7 +23,8 @@
 			  </div>
 			  <div class="form-group row">
 			    <div class="col-sm-offset-2 col-sm-10">
-			      <button type="submit" class="btn btn-primary" ng-click="signup(user)">Sign up</button>
+			    	<button type="submit" class="btn btn-primary signup-btn" ng-hide="loading" ng-click="signup(user)">Sign up</button>
+			    	<button type="submit" class="btn btn-primary signup-btn" ng-show="loading"><i class="fa fa-circle-o-notch fa-spin fa-lg"></i></button>
 			    </div>
 			  </div>
 			</form>
