--- a/app/index.html
+++ b/app/index.html
@@ -58,7 +58,7 @@
               <ul class="nav navbar-nav">
                 <li><a href="#/roster">Roster</a></li>
 								<li><a href="#/schedule">Schedule</a></li>
-								<li><a href="http://tmsdln.com/h4gq" target="_blank">Standings</a></li>
+								<li><a href="http://tmsdln.com/jlcb" target="_blank">Standings</a></li>
               </ul>
 							<ul class="nav navbar-nav navbar-right" ng-controller="MainCtrl">
 								<li class="dropdown">
